--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <button onclick="subscribe()">Sub</button>
     <script>
         addEventListener('load', async () => {
-            let sw = await navigator.serviceWorker.register('./serviceWorker.js')
-            console.log(sw)
-        })
+            let sw = await navigator.serviceWorker.register('./serviceWorker.js');
+            console.log(sw);
+        });
     
-    async function subscribe() {
-        let sw = await navigator.serviceWorker.ready;
-        let push = await sw.pushManager.subscribe({
-            userVisibleOnly: true,
-            applicationServerKey: 'BNrGC9Ci-eMfpfVaHaMmkzZd1Lzo3RypzzilYTskVaSo5-6tKnV5hH_oF7Tg04wl3mf3hE4LbvgrqYYx1xmMrHM'
-            })
-        console.log(JSON.stringify(push))
-    }
+        async function subscribe() {
+            let sw = await navigator.serviceWorker.ready;
+            let push = await sw.pushManager.subscribe({
+                userVisibleOnly: true,
+                applicationServerKey: 'BNrGC9Ci-eMfpfVaHaMmkzZd1Lzo3RypzzilYTskVaSo5-6tKnV5hH_oF7Tg04wl3mf3hE4LbvgrqYYx1xmMrHM'
+                });
+            console.log(JSON.stringify(push));
+        }
     </script>
 
 </body>
