--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-</head>
-<body>
-    <button onclick="subscribe()">Sub</button>
-    <script>
-        addEventListener('load', async () => {
-            let sw = await navigator.serviceWorker.register('./serviceWorker.js');
-            console.log(sw);
-        });
-    
-        async function subscribe() {
-            let sw = await navigator.serviceWorker.ready;
-            let push = await sw.pushManager.subscribe({
-                userVisibleOnly: true,
-                applicationServerKey: 'BNrGC9Ci-eMfpfVaHaMmkzZd1Lzo3RypzzilYTskVaSo5-6tKnV5hH_oF7Tg04wl3mf3hE4LbvgrqYYx1xmMrHM'
-                });
-            console.log(JSON.stringify(push));
-        }
-    </script>
+  </head>
+  <body>
+    <button onclick="subscribe()">Subscribe</button>
 
-</body>
+    <script>
+      async function subscribe() {
+        let sw = await navigator.serviceWorker.ready;
+        let push = await sw.pushManager.subscribe({
+          userVisibleOnly: true,
+          applicationServerKey:
+            'BNrGC9Ci-eMfpfVaHaMmkzZd1Lzo3RypzzilYTskVaSo5-6tKnV5hH_oF7Tg04wl3mf3hE4LbvgrqYYx1xmMrHM'
+        });
+        console.log(JSON.stringify(push));
+      }
+
+      if ('serviceWorker' in navigator) {
+        addEventListener('load', async () => {
+          let sw = await navigator.serviceWorker.register('./sw.js');
+          console.log(sw);
+        });
+      }
+    </script>
+  </body>
 </html>
