Fixing bugs where index.html is not seen by Netlify

--- a/pages/login.html
+++ b/pages/login.html
@@ -48,7 +48,7 @@
             <br>
             <div class="text-center">
               <button class="btn btn-dark text-center" id="loginBtn" type= "submit">Login</button><br><br>
-              <h5> Dont'have an account? <a href="/index.html">Create an account here</a></h5><br>
+              <h5> Dont'have an account? <a href="../">Create an account here</a></h5><br>
             </div>
             
          </form>
