--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <br>
             <div class="text-center">
               <button class="btn btn-dark text-center" id="subBtn" type="submit" >Create account</button><br><br>
-              <h5> Already have an account? <a href="login.html">Login here</a></h5><br>
+              <h5> Already have an account? <a href="/pages/login.html">Login here</a></h5><br>
             </div>
          </form>
      
